Added missing data.

--- a/source/_posts/2016-11-11-truenorthphp-2016.md
+++ b/source/_posts/2016-11-11-truenorthphp-2016.md
@@ -15,13 +15,13 @@ Many thanks to [Chris Hartjes](https://twitter.com/grmpyprogrammer) and [Peter M
 
 One of the nice things about TrueNorthPHP was that the conference ticket gets you into the tutorial day as well. The side effect of this is that the tutorials are far more full than they usually are! I can say that as a tutorial speaker this makes a big difference. Larger crowds can be a lot nicer than just getting three to five people total. While those experiences can be a bit more intimate it is always nice to have a crowd that is a little larger.
 
-I had to miss the morning tutorial session on account of some previously scheduled Blackfire on boarding sessions so I wasn't able to take part in any tutorials myself. I showed up just prior to lunchtime to start setting up the [SensioLabs](https://sensiolabs.com/) and [Blackfire](https://blackfire.io/dashboard/d49a68ca-b3ef-4799-b17c-849fc0ffd025/builds) table in the sponsor area. I was pleasantly surprised to see [Paul Reinheimer](https://mobile.twitter.com/preinheimer) and [Gemma Lynn](https://mobile.twitter.com/ellotheth) representing [WonderProxy](https://wonderproxy.com) already setup and had a nice chat with them. I also got to meet [Markus Latzel](https://twitter.com/mlatzel) and Rachel Lapp representing [WebPal](https://www.webpal.net) and learned more about their business.
+I had to miss the morning tutorial session on account of some previously scheduled Blackfire on boarding sessions so I wasn't able to take part in any tutorials myself. I showed up just prior to lunchtime to start setting up the [SensioLabs](https://sensiolabs.com/) and [Blackfire](https://blackfire.io/dashboard/d49a68ca-b3ef-4799-b17c-849fc0ffd025/builds) table in the sponsor area. I was pleasantly surprised to see [Paul Reinheimer](https://twitter.com/preinheimer) and [Gemma Lynn](https://twitter.com/ellotheth) representing [WonderProxy](https://wonderproxy.com) already setup and had a nice chat with them. I also got to meet [Markus Latzel](https://twitter.com/mlatzel) and Rachel Lapp representing [WebPal](https://www.webpal.net) and learned more about their business.
 
 For anyone wondering about return on investment and costs of sponsoring a conference, the WonderProxy blog has some great information for you! Paul wrote "[How to Sponsor a Conference](https://wonderproxy.com/blog/the-finances-behind-sponsoring-a-conference/)" and it is filled with great information.
 
 ### Introduction to Event Sourcing and CQRS
 
-I gave one of the two tutorials offered in the afternoon. This was the first time I've delivered my "Introduction to Event Sourcing and CQRS" talks in North America. I'd recently talked about the fact that I hadn't done any Event Sourcing or CQRS related talks or tutorials anywhere but in Europe on Episode 32 of That Podcast. It was nice to have that change and TrueNorthPHP was a great place to do it! The crowd was large, great to interact with, and came ready to ask questions. They were also kind enough to overlook a few of the technical hiccups I encountered during the live coding parts of the tutorial.
+I gave one of the two tutorials offered in the afternoon. This was the first time I've delivered my "[Introduction to Event Sourcing and CQRS](https://beau.io/talks/2016/11/03/introduction-to-event-sourcing-and-cqrs-tnphp16)" talks in North America. I'd recently talked about the fact that I hadn't done any Event Sourcing or CQRS related talks or tutorials anywhere but in Europe on [Episode 32: Revival](https://thatpodcast.io/episodes/episode-32-revival) of [That Podcast](https://thatpodcast.io). It was nice to have that change and TrueNorthPHP was a great place to do it! The crowd was large, great to interact with, and came ready to ask questions. They were also kind enough to overlook a few of the technical hiccups I encountered during the live coding parts of the tutorial.
 
 ![](/images/posts/2016-11-11-tutorial.jpg)
 
@@ -49,15 +49,15 @@ One great surprise was to have a chance to talk to [Arnold Visser](https://twitt
 
 This has been an ongoing theme that I've very much enjoyed in my first few months onboarding users and teams to Blackfire. Almost everyone loves it. It would be a lot harder for me to stay engaged and excited about getting people to use software that wasn't so exciting to its users.
 
-The team behind [Vehikl](http://vehikl.com) was another sponsor neighbor. I chatted with Chris Keithlin, Colin DeCarlo, and Grant Lovell though I'm not convinced there were not more Vehikl people in attendance. Grant was nice enough to loan me a charging cable for my iPad. Thanks Grant!
+The team behind [Vehikl](http://vehikl.com) was another sponsor neighbor. I chatted with Chris Keithlin, [Colin DeCarlo](https://twitter.com/colindecarlo), and [Grant Lovell](https://twitter.com/grant_lovell). Grant was nice enough to loan me a charging cable for my iPad. Thanks Grant!
 
-[Jason Hamilton-Masci](https://mobile.twitter.com/jason_hamiltonm) from [TestLauncher](https://www.testlauncher.com), another sponsor, also introduced himself and told me a bit about his business.
+[Jason Hamilton-Masci](https://twitter.com/jason_hamiltonm) from [TestLauncher](https://www.testlauncher.com), another sponsor, also introduced himself and told me a bit about his business.
 
 It was also nice to have [Mo](https://twitter.com/mk_justice) introduce himself to me this year. Thanks for coming out, Mo, and I hope we can stay in touch. :)
 
-Not only was [Jeremy Mikola](http://twitter.com/jmikola) nice enough to bring several pounds of fresh mozzarella from Hoboken, NJ, he was nice enough to leave it right at the SensioLabs and Blackfire booths! Thanks, Jeremy.
+[![](/images/posts/2016-11-11-cheese.jpg)](https://twitter.com/jmikola/status/794526126672642049)
 
-![](/images/posts/2016-11-11-cheese.jpg)
+Not only was [Jeremy Mikola](http://twitter.com/jmikola) nice enough to bring several pounds of fresh mozzarella from Hoboken, NJ, he was nice enough to leave it right at the SensioLabs and Blackfire booths! Thanks, Jeremy.
 
 I was also excited to see Adam Lundrigan again! We had a chance to catch up for a bit so that was quite nice. Hoping that we'll be able to meet at another conference sometime soon.
 
