--- a/source/_posts/2016-11-11-truenorthphp-2016.md
+++ b/source/_posts/2016-11-11-truenorthphp-2016.md
@@ -95,6 +95,8 @@ The hackathon was finished around 10pm as expected and we were all rushed out qu
 
 The first two thirds of the day were spent doing the sponsor thing. [Ben Marks](https://twitter.com/benmarks) came by and was nice enough to take this picture. Thanks for the great photo, Ben!
 
+I also took the opportunity to wear my [Open Sourcing Mental Illness](https://osmihelp.org/) shirt as I was going to be giving a talk that day. [Ed Finkler](https://twitter.com/funkatron) also dropped off a nice supply of OSMI stickers and magnets to add to the collection of schwag by my area of the sponsors table.
+
 ### JeoPHPardy
 
 The second day of the conference started out with two rounds of JeoPHPardy hosted by Jeremy Mikola. I love these events and was happy to join in the second round. I managed to get out after answering just two $100 questions **correctly** for a total of $200. Go me!
