Fix up Bob's name and link to Twitter.

--- a/source/_posts/2016-11-11-truenorthphp-2016.md
+++ b/source/_posts/2016-11-11-truenorthphp-2016.md
@@ -81,7 +81,7 @@ In any event, I thought the talk was well presented and I'd recommend it to anyo
 
 I'm a fan of TrueNorthPHP's hackathons because it usually gives me a great opportunity to socialize with people. This hackathon was no different. I stayed by the sponsor area most of the night but plenty of people were milling about which was nice.
 
-One of the people looking to socialize during the hackathon was Bill Bloom. We had a chance to catch up a bit. He also has [a review of TrueNorthPHP 2016](https://southlasalle.com/truenorthphpconference2016) up on his blog!
+One of the people looking to socialize during the hackathon was [Bob Bloom](https://twitter.com/bobbloom). We had a chance to catch up a bit. He also has [a review of TrueNorthPHP 2016](https://southlasalle.com/truenorthphpconference2016) up on his blog!
 
 In addition to what appeared to be a Magic the Gathering title match, Jeremy Mikola brought some additional entertainment in the form of a "weird flavor Pringles tasting" event. Which, of course, was recorded for all to enjoy.
 
