Editing from ninjagrl

--- a/source/_posts/2016-11-11-truenorthphp-2016.md
+++ b/source/_posts/2016-11-11-truenorthphp-2016.md
@@ -7,7 +7,7 @@ social_image: /images/posts/2016-11-11-sponsor.jpg
 
 Last weekend I had the privilege to attend the fifth and final TrueNorthPHP in Toronto, Ontario. This was my third and hadn't realized there were only five altogether! I think this says a lot about this conference as it had always felt to me like it had been around much longer than that.
 
-One of my favorite things about conferences is seeing people I only ever get to see at conferences. I used to do a decent job of remembering all of the people I saw but it gets harder with age. I am happy that I do seem to be getting a bit better at remembering names and faces, though. :)
+One of my favorite things about conferences is seeing people I only ever get to see at conferences. I used to do a decent job of remembering all of the people I'd see but it gets harder with age. I am happy that I do seem to be getting a bit better at remembering names and faces, though. :)
 
 Many thanks to [Chris Hartjes](https://twitter.com/grmpyprogrammer) and [Peter Meth](https://twitter.com/devopsmeth) for all their hard work making TrueNorthPHP 2016 the event that it was. Pete picked me up from the airport again and got me safely to the hotel even though my flight was several hours late. He also managed to keep a PHP Wooly Mamoth from last year so I could finally add it to my collection!
 
@@ -25,7 +25,7 @@ I gave one of the two tutorials offered in the afternoon. This was the first tim
 
 ![](/images/posts/2016-11-11-tutorial.jpg)
 
-I was happy with my performance for the most part. It was clear to me that I had relied a little too heavily on the fact that I've given this tutorial several times in the past and hadn't prepared enough on the live coding side of things. In particular, I've upgraded to PHP 7.0 since the last time I delivered this tutorial and project was yielding unhelpful error messages from PHPUnit. The errors were expected, but the usual helpful pointers to get us all to the next level (like methods that needed to be implemented) were replaced with actual PHP Errors bubbling. It was fixed by myself by using an old version of PHP 5.6.9 I had laying around on my laptop while someone in the audience who also happened to be running PHP 7.X (GO YOU!) fixed it by updating to a newer version of PHPUnit.
+I was happy with my performance for the most part. It was clear to me that I had relied a little too heavily on the fact that I've given this tutorial several times in the past and hadn't prepared enough on the live coding side of things. In particular, I've upgraded to PHP 7.0 since the last time I delivered this tutorial and project was yielding unhelpful error messages from PHPUnit. The errors were expected, but the usual helpful pointers to get us all to the next level (like methods that needed to be implemented) were replaced with actual PHP Errors bubbling. I fixed it myself by using an old version of PHP 5.6.9 I had laying around on my laptop while someone in the audience who also happened to be running PHP 7.X (GO YOU!) fixed it by updating to a newer version of PHPUnit.
 
 I also need to get more familiar with presentation mode in PHPStorm. It worked for the most part but I lost a tiny bit of time trying to tweak things to make them look better. I had someone come up to me later and gave me a new PHPStorm short-cut that I hadn't known before. That was super useful, though I cannot remember exactly who did that. If it was you, thanks again. :)
 
@@ -43,7 +43,7 @@ I had walked to the restaurant with a group of people and spent most of that wal
 
 ## Day One
 
-Day one was almost entirely dedicated to manning the SensioLabs and Blackfire booths. I had a chance to talk to a bunch of people who either hadn't heard of Blackfire and a few that had heard of it but had never used it.
+Day one was almost entirely dedicated to manning the SensioLabs and Blackfire booths. I had a chance to talk to a bunch of people who either hadn't heard of Blackfire or had heard of it but had never used it.
 
 One great surprise was to have a chance to talk to [Arnold Visser](https://twitter.com/amvapor) of [Demac Media](http://www.demacmedia.com/). Unlike almost everyone else I talked to, Arnold had used Blackfire a *ton* and wanted to find out the best way for Demac Media to *use it more*.
 
